test/lambda/negative/runtime/operator_comparability_dynamic.ls
// @expect-error: E305
// @description: dynamic ordered comparisons reject non-magnitude families

let x: any = "a"
let y: any = 1
(x < y)
